Specify default maven goal

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     </scm>
 
     <build>
+        <defaultGoal>clean install</defaultGoal>
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
