--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
 
     <groupId>io.github.lucariatias</groupId>
     <artifactId>personimator</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>0.0.2</version>
 
     <scm>
         <connection>scm:git:https://github.com/Lucariatias/personimator.git</connection>
         <url>https://github.com/Lucariatias/personimator</url>
         <developerConnection>scm:git:https://github.com/Lucariatias/personimator.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v0.0.2</tag>
     </scm>
 
     <build>
